Implemented the request. Created the flux till viewModel. Created ViewModel. Solved the problem in main activity xml.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Becoming Dev"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textColor="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
